--- a/fly.toml
+++ b/fly.toml
@@ -1,3 +1,8 @@
+# fly.toml app configuration file generated for gucci9-bot on 2026-02-10T09:58:50+08:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
 app = 'gucci9-bot'
 primary_region = 'sin'
 
@@ -10,14 +15,13 @@ primary_region = 'sin'
   PYTHONUNBUFFERED = '1'
 
 [processes]
-  app = "python bot.py"
+  app = 'python bot.py'
+
+[[mounts]]
+  source = 'gucci9_bot_data'
+  destination = '/data'
 
 [[vm]]
   memory = '1gb'
-  cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
-
-[[mounts]]
-  source = "gucci9_bot_data"
-  destination = "/data"
